<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">AneCMS Mobile</string><string name="settings_username">username</string><string name="settings_password">password</string><string name="settings_server">server</string>


    <string name="settings">Settings</string>
    <string name="connection">Connection</string>
	<string name="blog">Blog</string>
	<string name="username">Username</string>
	<string name="insert_username">Insert the Username</string>
	<string name="password">Password</string>
	<string name="insert_password">Insert the Password</string>
	<string name="server">XML-RPC Server</string>
	<string name="insert_server">Insert the Server Address</string>
	<string name="update_services">Reload Services</string>
	<string name="login_error">Error Logging in, check settings</string>
	<string name="register">Register Users</string>
	<string name="users">Users</string>
	<string name="home">Home</string>
	<string name="new_post">New Post</string>
	<string name="post_title">Post Title</string>
	<string name="post_message">Post Message</string>
	<string name="authentication">Authentication</string>
	<string name="post_it">Publish</string>
	
	<string name="services_updated">Service List Retrieved</string>
	<string name="save">Save</string>


<string name="please_wait">Please wait...</string>
<string name="retrieving_data">Retrieving data ...</string>
<string name="server_not_valid">Invalid Server</string>
<string name="posted">Article Posted</string>
<string name="not_posted">Error Posting Article</string>
<string name="u_button"><u>U</u></string>
<string name="rem_post">Delete Post</string>
</resources>
